--- a/claudia/pom.xml
+++ b/claudia/pom.xml
@@ -86,13 +86,13 @@
 	</organization>
 
 	<modules>
-		<module>../ovf-manager</module>
-<module>../clotho</module>
-<module>../claudia-commons</module>
-<module>../tcloud-server</module>
-<module>../driver-clotho</module>
-<module>../driver-one</module>
-<module>../claudia-client</module>
+		<module>/ovf-manager</module>
+<module>/clotho</module>
+<module>/claudia-commons</module>
+<module>/tcloud-server</module>
+<module>/driver-clotho</module>
+<module>/driver-one</module>
+<module>/claudia-client</module>
 
 
 
