--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>com.telefonica.claudia</groupId>
       <artifactId>ovf-manager</artifactId>
-      <version>1.0RC4-SNAPSHOT</version>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
     
     	<!-- OVF-dependencies; this should be changed  -->
