--- a/driver-one/pom.xml
+++ b/driver-one/pom.xml
@@ -20,16 +20,16 @@
     <dependency>
       <groupId>com.telefonica.claudia</groupId>
       <artifactId>tcloud-server</artifactId>
-      <version>[0.1.1,]</version>
+      <version>0.1.1</version>
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
+     <dependency>
       <groupId>com.telefonica.claudia</groupId>
       <artifactId>ovf-manager</artifactId>
-      <version>1.0RC4-SNAPSHOT</version>
-      <scope>provided</scope>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
+
 
     <dependency>
       <groupId>org.apache.xmlrpc</groupId>
