--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,20 @@
 					<artifactId>maven-site-plugin</artifactId>
 					<version>2.0</version>
 				</plugin>
+ <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2-beta-5</version>
+        <configuration>
+        
+          <descriptorRefs>
+            <descriptorRef>project</descriptorRef>
+          </descriptorRefs>
+
+        </configuration>
+      </plugin>
+
 			</plugins>
+
 		</pluginManagement>
 	</build>
 
