--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -62,7 +62,7 @@
         </configuration>
       </plugin>
 
-      <plugin>
+   <!--   <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2-beta-5</version>
         <configuration>
@@ -75,7 +75,35 @@
           </descriptorRefs>
 
         </configuration>
-      </plugin>
+      </plugin>-->
+
+<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+            <descriptor>src/main/assembly/src.xml</descriptor>
+            <descriptor>src/main/assembly/srcEnv.xml</descriptor>
+          </descriptors>
+
+
+				</configuration>
+
+				<executions>
+
+					<execution>
+						<id>bundle</id>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<phase>package</phase>
+					</execution>
+
+				</executions>
+
+			</plugin>
+
+
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
