--- a/driver-clotho/pom.xml
+++ b/driver-clotho/pom.xml
@@ -63,7 +63,7 @@
         </configuration>
       </plugin>
 
-      <plugin>
+     <!-- <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2-beta-5</version>
         <configuration>
@@ -74,7 +74,34 @@
             <descriptorRef>project</descriptorRef>
           </descriptorRefs>
         </configuration>
-      </plugin>
+      </plugin>-->
+
+<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+            <descriptor>src/main/assembly/src.xml</descriptor>
+            
+          </descriptors>
+
+
+				</configuration>
+
+				<executions>
+
+					<execution>
+						<id>bundle</id>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<phase>package</phase>
+					</execution>
+
+				</executions>
+
+			</plugin>
+
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
