--- a/ovf-manager/pom.xml
+++ b/ovf-manager/pom.xml
@@ -37,6 +37,18 @@
 	</configuration>
       </plugin>
 
+ <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2-beta-5</version>
+        <configuration>
+         
+          <descriptorRefs>
+            <descriptorRef>project</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+
+
 		</plugins>
 
 	</build>
