--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -10,7 +10,7 @@
   <url>http://maven.apache.org</url>
   <dependencies>
   
-    <dependency>
+<dependency> 
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.3</version>
@@ -257,7 +257,9 @@
                        </exclusion>
                </exclusions>
        </dependency>
-  </dependencies>
+
+
+</dependencies>
 
   <build>
     <plugins>
@@ -332,9 +334,60 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.6.1</version>
       </plugin>
+                        <plugin>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>rpm-maven-plugin</artifactId>
+                                <version>2.0.1</version>
+                                <executions>
+                                        <execution>
+                                                <goals>
+                                                        <goal>rpm</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                                <configuration>
+                                        <copyright>2010, NoBody</copyright>
+                                        <group>Development</group>
+                                        <description>Maven Recipe: RPM Package.</description>
+                                        <mappings>
+                                                <mapping>
+                                                        <directory>${app.home}/bin/</directory>
+                                                        <sources>
+                                                                <source>
+                                                                <location>target/clotho-0.1.1-environment/clotho/bin</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
 
+                                                <mapping>
+                                                        <directory>${app.home}/lib/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>target/clotho-0.1.1-environment/clotho/lib</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+                                                 <mapping>
+                                                        <directory>${app.home}/conf/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>target/clotho-0.1.1-environment/clotho/conf</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+
+                                                <mapping>
+                                                        <directory>${app.home}/logs</directory>
+
+                                                </mapping>
+                                        </mappings>
+                                </configuration>
+                        </plugin>  
     </plugins>
   </build>
+<properties>
+        <app.home>/opt/claudia/</app.home>
+        </properties>
 
   <repositories>
     <repository>
