--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -185,7 +185,58 @@
         <version>2.6.1</version>
       </plugin>
 
+                        <plugin>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>rpm-maven-plugin</artifactId>
+                                <version>2.0.1</version>
+                                <executions>
+                                        <execution>
+                                                <goals>
+                                                        <goal>rpm</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                                <configuration>
+                                        <copyright>2010, NoBody</copyright>
+                                        <group>Development</group>
+                                        <description>Maven Recipe: RPM Package.</description>
+                                        <mappings>
+                                                <mapping>
+                                                        <directory>${app.home}/bin/</directory>
+                                                        <sources>
+                                                                <source>
+                                                                <location>target/tcloud-server-0.1.1-environment.dir/tcloud-server/bin</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+
+                                                <mapping>
+                                                        <directory>${app.home}/lib/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>target/tcloud-server-0.1.1-environment.dir/tcloud-server/lib</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+                                                 <mapping>
+                                                        <directory>${app.home}/conf/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>target/tcloud-server-0.1.1-environment.dir/tcloud-server/conf</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+
+                                                <mapping>
+                                                        <directory>${app.home}/logs</directory>
+
+                                                </mapping>
+                                        </mappings>
+                                </configuration>
+                        </plugin>
     </plugins>
   </build>
-
+<properties>
+        <app.home>/opt/claudia/</app.home>
+        </properties>
 </project>
