pom modifications for rpm packages

--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -226,7 +226,14 @@
                                                                 </source>
                                                         </sources>
                                                 </mapping>
-
+                                                 <mapping>
+                                                        <directory>${app.home}/driver/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>../../driver-clotho/target/driver-clotho-0.1.1-deployable.zip</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
                                                 <mapping>
                                                         <directory>${app.home}/logs</directory>
 
