--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -232,6 +232,9 @@
                                                                 <source>
                                                                 <location>../driver-clotho/target/driver-clotho-0.1.1-deployable.zip</location>
                                                                 </source>
+								 <source>
+                                                                <location>../driver-one/target/driver-one-0.1-1-deployable.zip</location>
+                                                                </source>
                                                         </sources>
                                                 </mapping>
                                                 <mapping>
