--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -110,7 +110,57 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.6.1</version>
       </plugin>
+                        <plugin>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>rpm-maven-plugin</artifactId>
+                                <version>2.0.1</version>
+                                <executions>
+                                        <execution>
+                                                <goals>
+                                                        <goal>rpm</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                                <configuration>
+                                        <copyright>2010, NoBody</copyright>
+                                        <group>Development</group>
+                                        <description>Maven Recipe: RPM Package.</description>
+                                        <mappings>
+                                                <mapping>
+                                                        <directory>${app.home}/bin/</directory>
+                                                        <sources>
+                                                                <source>
+                                                                <location>target/claudia-client-0.1.1-environment.dir/ClaudiaClient/bin</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
 
+                                                <mapping>
+                                                        <directory>${app.home}/lib/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>target/claudia-client-0.1.1-environment.dir/ClaudiaClient/lib</logation>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+                                                 <mapping>
+                                                        <directory>${app.home}/conf/</directory>
+                                                         <sources>
+                                                                <source>
+                                                                <location>target/claudia-client-0.1.1-environment.dir/ClaudiaClient/conf</location>
+                                                                </source>
+                                                        </sources>
+                                                </mapping>
+                                                <mapping>
+                                                        <directory>${app.home}/logs</directory>
+
+                                                </mapping>
+                                        </mappings>
+                                </configuration>
+                        </plugin>
     </plugins>
-  </build>  
+  </build>
+<properties>
+        <app.home>/opt/claudia/</app.home>
+        </properties>
 </project>
