packaging script changes

--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -131,6 +131,7 @@
                                                         <sources>
                                                                 <source>
                                                                 <location>target/claudia-client-0.1.1-environment.dir/ClaudiaClient/bin</location>
+                                                                 <filemode>755</filemode>
                                                                 </source>
                                                         </sources>
                                                 </mapping>
