--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -206,6 +206,7 @@
                                                         <sources>
                                                                 <source>
                                                                 <location>target/tcloud-server-0.1.1-environment.dir/tcloud-server/bin</location>
+                                                                 <filemode>755</filemode>
                                                                 </source>
                                                         </sources>
                                                 </mapping>
