--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -353,6 +353,8 @@
                                                 <mapping>
                                                         <directory>${app.home}/bin/</directory>
 							<filemode>755</filemode>
+                                                        <username>root</username>
+                                                        <groupname>root</groupname>
                                                         <sources>
                                                                 <source>
                                                                 <location>target/clotho-0.1.1-environment.dir/clotho/bin</location>
