--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -262,6 +262,19 @@
 
 
 </dependencies>
+  <distributionManagement>
+    <repository>
+      <id>stratuslab.releases</id>
+      <name>Releases</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>stratuslab.snapshots</id>
+      <name>Snapshots</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 <!-- <distributionManagement>
                <repository>
                <id>stratuslab.releases</id>
