--- a/ovf-manager/pom.xml
+++ b/ovf-manager/pom.xml
@@ -48,7 +48,14 @@
         </configuration>
       </plugin>
 
-
+ <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-deploy-plugin</artifactId>
+     <version>2.5</version>
+     <configuration>
+       <skip>true</skip>
+     </configuration>
+   </plugin>
 		</plugins>
 
 	</build>
