--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -112,6 +112,11 @@
        </dependency>
     
   </dependencies>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
 
   <build>
     <plugins>
