--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -312,11 +312,11 @@
           </archive>
         </configuration>
       </plugin>
-      <!--  <plugin>
+       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.5</version>
-        </plugin>-->
+        </plugin>
     <!--  <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2-beta-5</version>
