--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -76,7 +76,14 @@
 
         </configuration>
       </plugin>-->
-
+ <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-deploy-plugin</artifactId>
+     <version>2.5</version>
+     <configuration>
+       <skip>true</skip>
+     </configuration>
+   </plugin>
 <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
