--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,16 @@
 	</modules>
 
 	<distributionManagement>
-    		<repository>
+    	<!--	<repository>
       		<id>stratuslab.releases</id>
      			<name>Releases</name>
      			 <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-   		 </repository>
+   		 </repository>-->
     		<snapshotRepository>
       		<id>stratuslab.snapshots</id>
       		<name>Snapshots</name>
       		<url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
-    		</snapshotRepository>
+    		</snapshotRepository> 
   	</distributionManagement>
 
 
