--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -113,11 +113,11 @@
     
   </dependencies>
   <distributionManagement>
-    <repository>
+   <!-- <repository>
       <id>stratuslab.releases</id>
       <name>Releases</name>
       <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-    </repository>
+    </repository>-->
     <snapshotRepository>
       <id>stratuslab.snapshots</id>
       <name>Snapshots</name>
