--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -263,11 +263,11 @@
 
 </dependencies>
   <distributionManagement>
-    <repository>
+ <!--   <repository>
       <id>stratuslab.releases</id>
       <name>Releases</name>
       <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-    </repository>
+    </repository>-->
     <snapshotRepository>
       <id>stratuslab.snapshots</id>
       <name>Snapshots</name>
@@ -275,18 +275,6 @@
     </snapshotRepository>
   </distributionManagement>
 
-<!-- <distributionManagement>
-               <repository>
-               <id>stratuslab.releases</id>
-                       <name>Releases</name>
-                        <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-                </repository>
-               <snapshotRepository>
-               <id>stratuslab.snapshots</id>
-               <name>Snapshots</name>
-               <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
-               </snapshotRepository>
-       </distributionManagement>-->
   <build>
     <plugins>
       <plugin>
