--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.telefonica.claudia</groupId>
   <artifactId>clotho</artifactId>
-  <version>0.1.1</version>
+  <version>0.1.1-SNAPSHOT</version>
   <name>Clotho: Claudias Service Lifecycle Manager</name>
   <url>http://maven.apache.org</url>
 
