--- a/claudia-commons/pom.xml
+++ b/claudia-commons/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.telefonica.claudia</groupId>
+  <groupId>eu.stratuslab.pkgs.claudia</groupId>
   <artifactId>claudia-commons</artifactId>
-  <version>0.1.1</version>
+  <version>0.1.1-SNAPSHOT</version>
   <name>Claudia Common libraries</name>
   <url>http://maven.apache.org</url>
   <dependencies>
