--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.telefonica.claudia</groupId>
+  <groupId>eu.stratuslab.pkgs.claudia</groupId>
   <artifactId>clotho</artifactId>
   <version>0.1.1-SNAPSHOT</version>
   <name>Clotho: Claudias Service Lifecycle Manager</name>
