--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -35,6 +35,19 @@
       <version>3.0</version>
     </dependency>
   </dependencies>
+  <distributionManagement>
+   <repository>
+      <id>stratuslab.releases</id>
+      <name>Releases</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>stratuslab.snapshots</id>
+      <name>Snapshots</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   
   <build>
     <plugins>
@@ -80,9 +93,6 @@
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-deploy-plugin</artifactId>
      <version>2.5</version>
-     <configuration>
-       <skip>true</skip>
-     </configuration>
    </plugin>
 <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
