--- a/ovf-manager/pom.xml
+++ b/ovf-manager/pom.xml
@@ -9,6 +9,18 @@
 	<packaging>jar</packaging>
 	<name>ovf-manager</name>
 	<version>0.1-SNAPSHOT</version>
+  <distributionManagement>
+   <repository>
+      <id>stratuslab.releases</id>
+      <name>Releases</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>stratuslab.snapshots</id>
+      <name>Snapshots</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 	<build>
 		<defaultGoal>install</defaultGoal>
@@ -52,9 +64,6 @@
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-deploy-plugin</artifactId>
      <version>2.5</version>
-     <configuration>
-       <skip>true</skip>
-     </configuration>
    </plugin>
 		</plugins>
 
