--- a/driver-clotho/pom.xml
+++ b/driver-clotho/pom.xml
@@ -18,16 +18,16 @@
     </dependency>
 
     <dependency>
-		 <groupId>com.telefonica.claudia</groupId>
+		 <groupId>eu.stratuslab.pkgs.claudia</groupId>
   		 <artifactId>tcloud-server</artifactId>
- 		 <version>0.1.1</version>
+ 		 <version>0.1.1-SNAPSHOT</version>
 		<scope>provided</scope>
     </dependency>
 
     <dependency>
-          <groupId>com.telefonica.claudia</groupId>
+          <groupId>eu.stratuslab.pkgs.claudia</groupId>
 	  <artifactId>claudia-commons</artifactId>
-	  <version>0.1.1</version>
+	  <version>0.1.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
