--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -39,13 +39,13 @@
 	</dependency>
 
     <dependency>
-      <groupId>com.telefonica.claudia</groupId>
+      <groupId>eu.stratuslab.pkgs.claudia</groupId>
       <artifactId>claudia-commons</artifactId>
-      <version>0.1.1</version>
+      <version>0.1.1-SNAPSHOT</version>
     </dependency>
     
     <dependency>
-      <groupId>com.telefonica.claudia</groupId>
+      <groupId>eu.stratuslab.pkgs.claudia</groupId>
       <artifactId>ovf-manager</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
