--- a/driver-one/pom.xml
+++ b/driver-one/pom.xml
@@ -56,9 +56,9 @@
 	</dependency>
 
     <dependency>
-      <groupId>com.telefonica.claudia</groupId>
+      <groupId>eu.stratuslab.pkgs.claudia</groupId>
 	  <artifactId>claudia-commons</artifactId>
-	  <version>0.1.1</version>
+	  <version>0.1.1-SNAPSHOT</version>
     </dependency>
     
   </dependencies>
