--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -7,6 +7,14 @@
   <artifactId>tcloud-server</artifactId>
   <version>0.1.1-SNAPSHOT</version>
   <name>TCloud Server</name>
+
+  <repositories>
+    <repository>  
+      <id>maven-restlet</id>  
+      <name>Public online Restlet repository</name>  
+      <url>http://maven.restlet.org</url>  
+    </repository>
+  </repositories>
   
   <dependencies>
     <dependency>
