--- a/ovf-manager/pom.xml
+++ b/ovf-manager/pom.xml
@@ -25,6 +25,16 @@
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<plugins>
+
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-resources-plugin</artifactId>
+	  <version>2.4.3</version>
+	  <configuration>
+	    <encoding>UTF-8</encoding>
+	  </configuration>
+	</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
