--- a/claudia-client-rpm/pom.xml
+++ b/claudia-client-rpm/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>claudia-client-rpm</artifactId>
   <version>0.1.1-SNAPSHOT</version>
   <name>Claudia Client RPM Packaging</name>
-  <packaging>pom</packaging>
+  <packaging>rpm</packaging>
 
   <repositories>
     <repository>  
@@ -86,9 +86,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.5</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -96,6 +93,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>rpm-maven-plugin</artifactId>
         <version>2.0.1</version>
+	<extensions>true</extensions>
 
         <executions>
           <execution>
