--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>clotho-rpm</artifactId>
   <version>0.1.1-SNAPSHOT</version>
   <name>Clotho RPM Packaging</name>
-  <packaging>pom</packaging>
+  <packaging>rpm</packaging>
 
   <repositories>
     <repository>  
@@ -86,9 +86,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.5</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -96,11 +93,12 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>rpm-maven-plugin</artifactId>
         <version>2.0.1</version>
+	<extensions>true</extensions>
 
         <executions>
           <execution>
             <goals>
-              <goal>rpm</goal>
+              <goal>attached-rpm</goal>
             </goals>
           </execution>
         </executions>
