--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>tcloud-server-rpm</artifactId>
   <version>0.1.1-SNAPSHOT</version>
   <name>TCloud Server RPM Package</name>
-  <packaging>pom</packaging>
+  <packaging>rpm</packaging>
 
   <repositories>
     <repository>  
@@ -125,9 +125,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.5</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -135,11 +132,12 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>rpm-maven-plugin</artifactId>
         <version>2.0.1</version>
+	<extensions>true</extensions>
 
         <executions>
           <execution>
             <goals>
-              <goal>rpm</goal>
+              <goal>attached-rpm</goal>
             </goals>
           </execution>
         </executions>
