always use release number of 1 to avoid race conditions with SNAPSHOT generated dates

--- a/claudia-client-rpm/pom.xml
+++ b/claudia-client-rpm/pom.xml
@@ -109,6 +109,8 @@
           <group>Development</group>
           <description>Maven Recipe: RPM Package.</description>
 
+	  <release>1</release>
+
           <mappings>
 
             <mapping>
@@ -154,6 +156,7 @@
 
   <properties>
     <app.home>/opt/claudia/</app.home>
+    <rpm.release>1</rpm.release>
   </properties>
 
 </project>
