--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -148,6 +148,8 @@
           <group>Development</group>
           <description>Maven Recipe: RPM Package.</description>
 
+	  <release>1</release>
+
           <mappings>
 
             <mapping>
