--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -8,6 +8,12 @@
   <name>Claudia Client</name>
   <url>http://maven.apache.org</url>
 
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <repositories>
     <repository>  
       <id>maven-restlet</id>  
