--- a/claudia/pom.xml
+++ b/claudia/pom.xml
@@ -5,7 +5,7 @@
 
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.telefonica.claudia</groupId>
+	<groupId>eu.stratuslab.pkgs.claudia</groupId>
 	<artifactId>claudia</artifactId>
 	<packaging>pom</packaging>
 	<name>claudia</name>
@@ -13,6 +13,11 @@
 	<url>http://claudia.morfeo-project.org</url>
 	<inceptionYear>2010</inceptionYear>
 
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
 	<build>
 		<plugins>
