--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -8,6 +8,12 @@
   <version>0.1.1-SNAPSHOT</version>
   <name>Clotho: Claudias Service Lifecycle Manager</name>
 
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <dependencies>
   
 <dependency> 
