--- a/driver-one/pom.xml
+++ b/driver-one/pom.xml
@@ -9,6 +9,12 @@
   <name>OpenNebula driver for TCloud</name>
   <url>http://maven.apache.org</url>
 
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
