--- a/ovf-manager/pom.xml
+++ b/ovf-manager/pom.xml
@@ -9,6 +9,13 @@
 	<packaging>jar</packaging>
 	<name>ovf-manager</name>
 	<version>0.1-SNAPSHOT</version>
+
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <distributionManagement>
    <repository>
       <id>stratuslab.releases</id>
