--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -9,6 +9,12 @@
   <name>TCloud Server RPM Package</name>
   <packaging>rpm</packaging>
 
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <repositories>
     <repository>  
       <id>maven-restlet</id>  
