--- a/tcloud-server/pom.xml
+++ b/tcloud-server/pom.xml
@@ -8,6 +8,12 @@
   <version>0.1.1-SNAPSHOT</version>
   <name>TCloud Server</name>
 
+  <parent>
+    <groupId>eu.stratuslab.pkgs.claudia</groupId>
+    <artifactId>claudia-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <repositories>
     <repository>  
       <id>maven-restlet</id>  
